--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,8 +16,12 @@ workflows:
       - name: Build Android App Bundle
         script: |
           flutter build appbundle --release
+      - name: Build Android APK
+        script: |
+          flutter build apk --release
     artifacts:
       - build/**/outputs/**/*.aab
+      - build/**/outputs/**/*.apk
       - build/**/outputs/**/mapping.txt
       - flutter_drive.log
 
