Fix: Add feature-delivery dependency, proguard rules, and flutter clean

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,6 +10,9 @@ workflows:
       - name: Set up local.properties
         script: |
           echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
+      - name: Clean build
+        script: |
+          flutter clean
       - name: Get Flutter packages
         script: |
           flutter packages get
